new stuffs are added.

--- a/HTML_Basics.ipynb
+++ b/HTML_Basics.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -1344,13 +1344,563 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Javascript\n",
+    "\n",
+    "#### 21.11.2016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### function and variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting exercise.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file exercise.html\n",
+    "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "<head>\n",
+    "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+    "    <title>exercise.html</title>\n",
+    "    <script>\n",
+    "        var a\n",
+    "        document.write(\"a=\", a, \"<br>\")\n",
+    "        a=123\n",
+    "        document.write(\"a=\", a, \"<br>\")\n",
+    "        a = \"this is a string\"\n",
+    "        document.write(\"a=\", a, \"<br>\")\n",
+    "        document.write(\"a=\", typeof a, \"<br>\")\n",
+    "\n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        car = new Object()\n",
+    "        car.color = \"yellow\"\n",
+    "        car.brand = \"Mitsubishi\"\n",
+    "        document.write(\"car color=\", car.color, \"<br>\",\"car brand=\",car.brand, \"<br>\")\n",
+    "\n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        alcohol = { vodka: \"strong\", beer: \"juice like\" }\n",
+    "        document.write(\"vodka=\", alcohol[\"vodka\"], \"<br>\", \"beer=\", alcohol[\"beer\"], \"<br>\")\n",
+    "\n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        document.write(parseInt(\"123.99\"), \"<br>\", parseInt(\"12345\"), \"<br>\", parseInt(\"123d45\"), \"<br>\")\n",
+    "\n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        var a = 5\n",
+    "\n",
+    "        if(a === 5){\n",
+    "            document.write(\"true\", \"<br>\")\n",
+    "            document.write(typeof a)\n",
+    "        }\n",
+    "        else{\n",
+    "            document.write(\"false\", \"<br>\")\n",
+    "            document.write(typeof a)\n",
+    "        }\n",
+    "        document.write(\"<br>\")\n",
+    "        if (a === \"5\") {\n",
+    "            document.write(\"true\", \"<br>\")\n",
+    "            document.write(\"Type of a is:\", typeof a, \". \", \" Type of '5' is:\", typeof \"5\", \"<br>\")\n",
+    "        }\n",
+    "        else {\n",
+    "            document.write(\"false\", \"<br>\")\n",
+    "            document.write(\"Type of a is:\", typeof a, \". \", \" Type of '5' is:\", typeof \"5\", \"<br>\")\n",
+    "        }\n",
+    "        document.write(\"<br>\")\n",
+    "        \n",
+    "        var age=parseInt(prompt(\"Please input your age\"))\n",
+    "        if (age > 0 && age <= 6)\n",
+    "          document.write(\"Age=\",age,\".Ticket type=\",\"free.\" )\n",
+    "        else if (age > 6 && age <= 25) \n",
+    "            document.write(\"Age=\", age, \".Ticket type=\", \"student.\")\n",
+    "        else if (age > 25 && age < 65)\n",
+    "            document.write(\"Age=\", age, \".Ticket type=\", \"full price.\")\n",
+    "        else if (age >= 65)\n",
+    "            document.write(\"Age=\", age, \".Ticket type=\", \"free.\")\n",
+    "\n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        var1 = 10\n",
+    "        var2 = 20\n",
+    "        function add(a,b){return \"a= \"+a+\", b= \"+b+\", a+b= \"+(a+b)+\"<br>\"}\n",
+    "        document.write(add(var1,var2)+\"<br>\")\n",
+    "        var1 = 30\n",
+    "        var2 = 50\n",
+    "        addObj = new Function(\"a\",\"b\",\"return (a+b)\")\n",
+    "\n",
+    "        document.write(\"var1=\" + var1 + \", var2= \" + var2+\", var1+var2= \"+addObj(var1,var2))\n",
+    "\n",
+    "\n",
+    "    </script>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "</body>\n",
+    "</html>\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+       "<head>\n",
+       "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+       "    <title>01varDeclarationTypeTransfer.html</title>\n",
+       "    <script>\n",
+       "        var a\n",
+       "        document.write(\"a=\", a, \"<br>\")\n",
+       "        a=123\n",
+       "        document.write(\"a=\", a, \"<br>\")\n",
+       "        a = \"this is a string\"\n",
+       "        document.write(\"a=\", a, \"<br>\")\n",
+       "        document.write(\"a=\", typeof a, \"<br>\")\n",
+       "\n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        car = new Object()\n",
+       "        car.color = \"yellow\"\n",
+       "        car.brand = \"Mitsubishi\"\n",
+       "        document.write(\"car color=\", car.color, \"<br>\",\"car brand=\",car.brand, \"<br>\")\n",
+       "\n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        alcohol = { vodka: \"strong\", beer: \"juice like\" }\n",
+       "        document.write(\"vodka=\", alcohol[\"vodka\"], \"<br>\", \"beer=\", alcohol[\"beer\"], \"<br>\")\n",
+       "\n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        document.write(parseInt(\"123.99\"), \"<br>\", parseInt(\"12345\"), \"<br>\", parseInt(\"123d45\"), \"<br>\")\n",
+       "\n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        var a = 5\n",
+       "\n",
+       "        if(a === 5){\n",
+       "            document.write(\"true\", \"<br>\")\n",
+       "            document.write(typeof a)\n",
+       "        }\n",
+       "        else{\n",
+       "            document.write(\"false\", \"<br>\")\n",
+       "            document.write(typeof a)\n",
+       "        }\n",
+       "        document.write(\"<br>\")\n",
+       "        if (a === \"5\") {\n",
+       "            document.write(\"true\", \"<br>\")\n",
+       "            document.write(\"Type of a is:\", typeof a, \". \", \" Type of '5' is:\", typeof \"5\", \"<br>\")\n",
+       "        }\n",
+       "        else {\n",
+       "            document.write(\"false\", \"<br>\")\n",
+       "            document.write(\"Type of a is:\", typeof a, \". \", \" Type of '5' is:\", typeof \"5\", \"<br>\")\n",
+       "        }\n",
+       "        document.write(\"<br>\")\n",
+       "        \n",
+       "        var age=parseInt(prompt(\"Please input your age\"))\n",
+       "        if (age > 0 && age <= 6)\n",
+       "          document.write(\"Age=\",age,\".Ticket type=\",\"free.\" )\n",
+       "        else if (age > 6 && age <= 25) \n",
+       "            document.write(\"Age=\", age, \".Ticket type=\", \"student.\")\n",
+       "        else if (age > 25 && age < 65)\n",
+       "            document.write(\"Age=\", age, \".Ticket type=\", \"full price.\")\n",
+       "        else if (age >= 65)\n",
+       "            document.write(\"Age=\", age, \".Ticket type=\", \"free.\")\n",
+       "\n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        var1 = 10\n",
+       "        var2 = 20\n",
+       "        function add(a,b){return \"a= \"+a+\", b= \"+b+\", a+b= \"+(a+b)+\"<br>\"}\n",
+       "        document.write(add(var1,var2)+\"<br>\")\n",
+       "        var1 = 30\n",
+       "        var2 = 50\n",
+       "        addObj = new Function(\"a\",\"b\",\"return (a+b)\")\n",
+       "\n",
+       "        document.write(\"var1=\" + var1 + \", var2= \" + var2+\", var1+var2= \"+addObj(var1,var2))\n",
+       "\n",
+       "\n",
+       "    </script>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "</body>\n",
+       "</html>\n",
+       "'''"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {
+      "isolated": true
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f=open('exercise.html','r')\n",
+    "html_file=f.read()\n",
+    "from IPython.display import HTML, display\n",
+    "display(HTML(html_file), metadata=dict(isolated=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9x9 table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting hwk.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file hwk.html\n",
+    "<!DOCTYPE html>\n",
+    "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "<head>\n",
+    "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+    "<style>\n",
+    "table{background-color:pink;border:red 2px solid;border-collapse: collapse;}\n",
+    "<--tr,td{border-right:red 2px solid} -->\n",
+    "<--table { border: none; border-collapse: collapse; }-->\n",
+    "table {  border-collapse: collapse; }\n",
+    "table td { border-left: 2px solid red; }\n",
+    "table td:first-child { border-left: none; }\n",
+    "\n",
+    "</style>\n",
+    "    <title>Homework_9x9table.html</title>\n",
+    "    <script>\n",
+    "        \n",
+    "        document.write(\"<br>\")\n",
+    "\n",
+    "        document.write(\"<table>\")\n",
+    "        for (j = 1; j <= 9; j++) {\n",
+    "            document.write(\"<tr>\")\n",
+    "            for (i = 1; i <= 9; i++) {\n",
+    "                document.write(\"<td>\")\n",
+    "                document.write(i +\"x\"+j+\"=\"+i*j+\"<br>\")\n",
+    "                document.write(\"</td>\")\n",
+    "            }\n",
+    "            document.write(\"</tr>\")\n",
+    "        }\n",
+    "        document.write(\"</table>\")\n",
+    "\n",
+    "\n",
+    "    </script>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html>\n",
+       "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+       "<head>\n",
+       "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+       "<style>\n",
+       "table{background-color:pink;border:red 2px solid;border-collapse: collapse;}\n",
+       "<--tr,td{border-right:red 2px solid} -->\n",
+       "<--table { border: none; border-collapse: collapse; }-->\n",
+       "table {  border-collapse: collapse; }\n",
+       "table td { border-left: 2px solid red; }\n",
+       "table td:first-child { border-left: none; }\n",
+       "\n",
+       "</style>\n",
+       "    <title>Homework_9x9table.html</title>\n",
+       "    <script>\n",
+       "        \n",
+       "        document.write(\"<br>\")\n",
+       "\n",
+       "        document.write(\"<table>\")\n",
+       "        for (j = 1; j <= 9; j++) {\n",
+       "            document.write(\"<tr>\")\n",
+       "            for (i = 1; i <= 9; i++) {\n",
+       "                document.write(\"<td>\")\n",
+       "                document.write(i +\"x\"+j+\"=\"+i*j+\"<br>\")\n",
+       "                document.write(\"</td>\")\n",
+       "            }\n",
+       "            document.write(\"</tr>\")\n",
+       "        }\n",
+       "        document.write(\"</table>\")\n",
+       "\n",
+       "\n",
+       "    </script>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "</body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {
+      "isolated": true
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f=open('hwk.html','r')\n",
+    "html_file=f.read()\n",
+    "from IPython.display import HTML, display\n",
+    "display(HTML(html_file), metadata=dict(isolated=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### button & function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_func.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_func.html\n",
+    "\n",
+    "<!DOCTYPE html>\n",
+    "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "<head>\n",
+    "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+    "<title>test_func.html</title>\n",
+    "\n",
+    "<script>\n",
+    "\n",
+    "var me = new Object();\n",
+    "me.name = \"chweng\";\n",
+    "me.age = \"secret\";\n",
+    "me.print = function () { return \"<br> My name is: \" + this.name + \". My age is: \" + this.age };\n",
+    "        \n",
+    "//document.write(me.print());\n",
+    "\n",
+    "</script>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<input type=\"button\" value=\"print my info\" onclick=\"document.write(me.print())\">\n",
+    "\n",
+    "</body>\n",
+    "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<!DOCTYPE html>\n",
+       "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+       "<head>\n",
+       "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+       "<title>01varDeclarationTypeTransfer.html</title>\n",
+       "\n",
+       "<script>\n",
+       "\n",
+       "var me = new Object();\n",
+       "me.name = \"chweng\";\n",
+       "me.age = \"secret\";\n",
+       "me.print = function () { return \"<br> my name is: \" + this.name + \". My age is: \" + this.age };\n",
+       "        \n",
+       "//document.write(me.print());\n",
+       "\n",
+       "</script>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "<input type=\"button\" value=\"print my info\" onclick=\"document.write(me.print())\">\n",
+       "\n",
+       "</body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {
+      "isolated": true
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f=open('test_func.html','r')\n",
+    "html_file=f.read()\n",
+    "from IPython.display import HTML, display\n",
+    "display(HTML(html_file), metadata=dict(isolated=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  a function can have local and global variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting local_global.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file local_global.html\n",
+    "\n",
+    "<!DOCTYPE html>\n",
+    "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "<head>\n",
+    "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+    "<title>01varDeclarationTypeTransfer.html</title>\n",
+    "\n",
+    "<script>\n",
+    "\n",
+    "function f(){\n",
+    "    var1=10;     // global\n",
+    "    var var2=20; // local\n",
+    "}\n",
+    "\n",
+    "    f();\n",
+    "    document.write(\"var1 (from f)= \"+var1);\n",
+    "    document.write(\"var2 (from f)= \"+var2); // won't be printed since var2 is not accessable.\n",
+    "</script>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "\n",
+    "</body>\n",
+    "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<!DOCTYPE html>\n",
+       "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+       "<head>\n",
+       "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\"/>\n",
+       "<title>01varDeclarationTypeTransfer.html</title>\n",
+       "\n",
+       "<script>\n",
+       "\n",
+       "function f(){\n",
+       "    var1=10;     // global\n",
+       "    var var2=20; // local\n",
+       "}\n",
+       "\n",
+       "    f();\n",
+       "    document.write(\"var1 (from f)= \"+var1);\n",
+       "    document.write(\"var2 (from f)= \"+var2); // won't be printed since var2 is not accessable.\n",
+       "</script>\n",
+       "</head>\n",
+       "<body>\n",
+       "\n",
+       "\n",
+       "</body>\n",
+       "</html>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {
+      "isolated": true
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f=open('local_global.html','r')\n",
+    "html_file=f.read()\n",
+    "from IPython.display import HTML, display\n",
+    "display(HTML(html_file), metadata=dict(isolated=True))"
+   ]
   }
  ],
  "metadata": {
