some new stuffs are added.

--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "run (-d) ps (-a) logs attach exec start stop rm"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1488,13 +1508,315 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 29112016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "```bash\n",
+    "docker exec -t stat /bin/ps\n",
+    "  PID TTY          TIME CMD\n",
+    "   35 ?        00:00:00 ps\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use the flag -v(volume) to share files with the container:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "docker run -it -P --name web-apache -v ~/apache2/html:/var/www/html iiiedu/apache\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a volume that is going to share data with the container will be created)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### troubleshooting: env in windows\n",
+    "\n",
+    "In windows 7, I met some problem while trying to access docker from BASH (MINGW64). This is fixed after following\n",
+    "\n",
+    "https://github.com/docker/docker/issues/22338"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "export DOCKER_TLS_VERIFY=\"1\"\n",
+      "export DOCKER_HOST=\"tcp://192.168.99.100:2376\"\n",
+      "export DOCKER_CERT_PATH=\"C:\\Users\\admin\\.docker\\machine\\machines\\default\"\n",
+      "export DOCKER_MACHINE_NAME=\"default\"\n",
+      "# Run this command to configure your shell: \n",
+      "# eval $(\"C:\\Program Files\\Docker Toolbox\\docker-machine.exe\" env default)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "docker-machine env default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### exercise: listen to the socket 9000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Docker Toolbox\\docker.exe: An error occurred trying to connect: Post http://%2F%2F.%2Fpipe%2Fdocker_engine/v1.24/containers/create?name=java_sock: open //./pipe/docker_engine: The system cannot find the file specified..\n",
+      "See 'C:\\Program Files\\Docker Toolbox\\docker.exe run --help'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "docker run -d --name java_sock -p 9000:9000 -v $PWD/code:/javatest iiiedu/socket 9000"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "https://hub.docker.com/_/tomcat/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-d50516e20d2b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d50516e20d2b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    docker-machine env default\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "docker-machine env default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME                              DESCRIPTION                                     STARS     OFFICIAL   AUTOMATED\n",
+      "tomcat                            Apache Tomcat is an open source implementa...   1047      [OK]       \n",
+      "dordoka/tomcat                    Ubuntu 14.04, Oracle JDK 8 and Tomcat 8 ba...   27                   [OK]\n",
+      "consol/tomcat-7.0                 Tomcat 7.0.57, 8080, \"admin/admin\"              16                   [OK]\n",
+      "consol/tomcat-8.0                 Tomcat 8.0.15, 8080, \"admin/admin\"              15                   [OK]\n",
+      "cloudesire/tomcat                 Tomcat server, 6/7/8                            11                   [OK]\n",
+      "davidcaste/alpine-tomcat          Apache Tomcat 7/8 using Oracle Java 7/8 wi...   10                   [OK]\n",
+      "andreptb/tomcat                   Debian Jessie based image with Apache Tomc...   6                    [OK]\n",
+      "openweb/oracle-tomcat             A fork off of Official tomcat image with O...   4                    [OK]\n",
+      "fbrx/tomcat                       Minimal Tomcat image based on Alpine Linux      3                    [OK]\n",
+      "kieker/tomcat                                                                     2                    [OK]\n",
+      "bitnami/tomcat                    Bitnami Tomcat Docker Image                     1                    [OK]\n",
+      "camptocamp/tomcat-logback         Docker image for tomcat with logback integ...   1                    [OK]\n",
+      "picoded/tomcat                    tomcat 8 with java 8, and MANAGER_USER / M...   1                    [OK]\n",
+      "abzcoding/tomcat-redis            a tomcat container with redis as session m...   1                    [OK]\n",
+      "stakater/tomcat                   Tomcat based on Ubuntu 14.04 and Oracle Java    0                    [OK]\n",
+      "cheewai/tomcat                    Tomcat and Oracle JRE in docker                 0                    [OK]\n",
+      "charlycoste/tomcat                Debian based Tomcat (don't use it, this is...   0                    [OK]\n",
+      "ping2ravi/tomcat                  Tomcat Versions 7 and 8                         0                    [OK]\n",
+      "blueur/tomcat                     Tomcat with the possibility to set the use...   0                    [OK]\n",
+      "davidcaste/debian-tomcat          Yet another Debian Docker image for Tomcat...   0                    [OK]\n",
+      "elcom/tomcat                      Tomcat with Java                                0                    [OK]\n",
+      "phpmentors/tomcat-app             Tomcat application image using Maven            0                    [OK]\n",
+      "oriaks/tomcat                     Tomcat                                          0                    [OK]\n",
+      "inspectit/tomcat                  Tomcat with inspectIT                           0                    [OK]\n",
+      "rennergabor/virgo-tomcat-server   Docker image for Eclipse Virgo Tomcat Server    0                    [OK]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "docker search tomcat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0: Pulling from library/tomcat\n",
+      "386a066cd84a: Pulling fs layer\n",
+      "75ea84187083: Pulling fs layer\n",
+      "3e2e387eb26a: Pulling fs layer\n",
+      "7c6c48f4275c: Pulling fs layer\n",
+      "887691f35f8f: Pulling fs layer\n",
+      "bdd1cefebf67: Pulling fs layer\n",
+      "598674c5963f: Pulling fs layer\n",
+      "cfa880bbc1a2: Pulling fs layer\n",
+      "d49a2408af9c: Pulling fs layer\n",
+      "5d631463743b: Pulling fs layer\n",
+      "be0768fbba94: Pulling fs layer\n",
+      "7c6c48f4275c: Waiting\n",
+      "887691f35f8f: Waiting\n",
+      "bdd1cefebf67: Waiting\n",
+      "598674c5963f: Waiting\n",
+      "cfa880bbc1a2: Waiting\n",
+      "d49a2408af9c: Waiting\n",
+      "5d631463743b: Waiting\n",
+      "be0768fbba94: Waiting\n",
+      "3e2e387eb26a: Verifying Checksum\n",
+      "3e2e387eb26a: Download complete\n",
+      "7c6c48f4275c: Verifying Checksum\n",
+      "7c6c48f4275c: Download complete\n",
+      "75ea84187083: Verifying Checksum\n",
+      "75ea84187083: Download complete\n",
+      "bdd1cefebf67: Verifying Checksum\n",
+      "bdd1cefebf67: Download complete\n",
+      "598674c5963f: Verifying Checksum\n",
+      "598674c5963f: Download complete\n",
+      "cfa880bbc1a2: Verifying Checksum\n",
+      "cfa880bbc1a2: Download complete\n",
+      "d49a2408af9c: Verifying Checksum\n",
+      "d49a2408af9c: Download complete\n",
+      "5d631463743b: Verifying Checksum\n",
+      "5d631463743b: Download complete\n",
+      "be0768fbba94: Verifying Checksum\n",
+      "be0768fbba94: Download complete\n",
+      "386a066cd84a: Verifying Checksum\n",
+      "386a066cd84a: Download complete\n",
+      "386a066cd84a: Pull complete\n",
+      "75ea84187083: Pull complete\n",
+      "3e2e387eb26a: Pull complete\n",
+      "7c6c48f4275c: Pull complete\n",
+      "887691f35f8f: Verifying Checksum\n",
+      "887691f35f8f: Download complete\n",
+      "887691f35f8f: Pull complete\n",
+      "bdd1cefebf67: Pull complete\n",
+      "598674c5963f: Pull complete\n",
+      "cfa880bbc1a2: Pull complete\n",
+      "d49a2408af9c: Pull complete\n",
+      "5d631463743b: Pull complete\n",
+      "be0768fbba94: Pull complete\n",
+      "Digest: sha256:a2d3a9e93a3bce728ac8b5e14052911a36ea1a40ef1f9b1d8203ba88945a2e33\n",
+      "Status: Downloaded newer image for tomcat:8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "docker pull tomcat:8.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "docker run --rm tomcat:8.0 -P --name mytomcat \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the flag --rm: remove the container after finishing the execusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "FROM tomcat:8.0\n",
+    "MAINTAINER iii education\n",
+    "\n",
+    "USER root\n",
+    "\n",
+    "RUN mkdir /usr/local/tomcat/webapps/jsptes\n",
+    "WORKDIR /usr/local/tomcat/webapps/jsptest\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "docker run -d --name tomcat_jsp -p 8080:8080 -v $PWD/code:/usr/local/tomcat/webaps/jsptest iiiedu/tomcat"
+   ]
   }
  ],
  "metadata": {
