--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -948,6 +948,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "$docker rm $(docker ps -a -q)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {
     "collapsed": false
@@ -1500,9 +1511,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
